syntax = "proto3";
package rpc;
option go_package = "./rpc";

service UserService{
  rpc InsertUser(UserRequest) returns (UserResponse) {}
}

message UserRequest{
  string name = 1;
  string surname = 2;
  string email = 3;
  bool activated = 4;
  string role = 5;
}

message UserResponse{
  bool ok = 1;
}